# ChangeLog for sys-devel/flex
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/flex/ChangeLog,v 1.79 2009/02/09 20:14:34 maekke Exp $

  09 Feb 2009; Markus Meier <maekke@gentoo.org> flex-2.5.35.ebuild:
  amd64 stable, bug #244417

  28 Oct 2008; Raúl Porcel <armin76@gentoo.org> flex-2.5.35.ebuild:
  alpha/ia64 stable #244417

  28 Oct 2008; Brent Baude <ranger@gentoo.org> flex-2.5.35.ebuild:
  stable ppc64, bug 244417

  27 Oct 2008; Ferris McCormick <fmccor@gentoo.org> flex-2.5.35.ebuild:
  Sparc stable, Bug #244417.

  26 Oct 2008; Jeroen Roovers <jer@gentoo.org> flex-2.5.35.ebuild:
  Stable for HPPA (bug #244417).

  26 Oct 2008; nixnut <nixnut@gentoo.org> flex-2.5.35.ebuild:
  Stable on ppc wrt bug 244417

  26 Oct 2008; Torsten Veller <tove@gentoo.org> flex-2.5.35.ebuild:
  Stable on x86 (#244417)

*flex-2.5.35 (26 Feb 2008)

  26 Feb 2008; Mike Frysinger <vapier@gentoo.org> +flex-2.5.35.ebuild:
  Version bump.

*flex-2.5.34 (13 Dec 2007)

  13 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/flex-2.5.34-isatty.patch, +flex-2.5.34.ebuild:
  Version bump.

  16 Oct 2007; Christoph Mende <angelos@gentoo.org> flex-2.5.33-r3.ebuild:
  Stable on amd64 wrt bug #195255

  12 Oct 2007; Lars Weiler <pylon@gentoo.org> flex-2.5.33-r3.ebuild:
  stable ppc, bug #195255

  11 Oct 2007; Tom Gall <tgall@gentoo.org> flex-2.5.33-r3.ebuild:
  stable on ppc64, bug #195255

  10 Oct 2007; Raúl Porcel <armin76@gentoo.org> flex-2.5.33-r3.ebuild:
  alpha/ia64 stable wrt #195255

  09 Oct 2007; Dawid Węgliński <cla@gentoo.org> flex-2.5.33-r3.ebuild:
  Stable on x86

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> flex-2.5.33-r3.ebuild:
  Stable for SPARC (bug #195255).

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> flex-2.5.33-r3.ebuild:
  Stable for HPPA (bug #195255).

  03 Aug 2007; Mike Frysinger <vapier@gentoo.org> flex-2.5.33-r3.ebuild: